--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
             <!--col-->
             <div class="col">
                 <div class="row text-center">
-                    <div class="col-12 col-md-6 mb-3">
+                    <div class="col-6 mb-3">
                         <a href="A/M1.html" class="a-menu mb-3 w-50 d-block m-auto"><img src="my-img/menu1.png" class="img-menu w-100"></a>
                         <a href="A/M1.html" class="text-menu fs-6">Metaverse คืออะไร</a>
                     </div>
-                    <div class="col-12 col-md-6 mb-3">
+                    <div class="col-6 mb-3">
                         <a href="A/M4.html" class="a-menu mb-3 w-50 d-block m-auto"><img src="my-img/menu4.png" class="img-menu w-100"></a>
                         <a href="A/M4.html" class="text-menu fs-6">ประโยชน์ของ Metaverse</a>
                     </div>
-                    <div class="col-12 col-md-6 mb-3">
+                    <div class="col-6 mb-3">
                         <a href="A/M5.html" class="a-menu mb-3 w-50 d-block m-auto"><img src="my-img/menu5.png" class="img-menu w-100"></a>
                         <a href="A/M5.html" class="text-menu fs-6">ข้อดีของ Metaverse</a>
                     </div>
-                    <div class="col-12 col-md-6 mb-3">
+                    <div class="col-6 mb-3">
                         <a href="A/M6.html" class="a-menu mb-3 w-50 d-block m-auto"><img src="my-img/menu6.png" class="img-menu w-100"></a>
                         <a href="A/M6.html" class="text-menu fs-6">ข้อเสียของ Metaverse</a>
                     </div>
